Add field description.

--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -6,6 +6,7 @@
 
   <p>Bringing <a href="https://www.astro.up.pt/resources/sweet-cat/">SWEET-Cat</a> to new sweets!</p>
 
+  <p>A detailed description of each field can be found <a href="{{ url_for('static', filename='table.pdf') }}">here</a></p>
 
   <table class="table table-hover table-responsive">
     <thead>
