Adding interactive table with search (all columns)

--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -7,7 +7,7 @@
   <p>Bringing <a href="https://www.astro.up.pt/resources/sweet-cat/">SWEET-Cat</a> to new sweets!</p>
 
 
-  <table class="table table-hover table-responsive">
+  <table id="sc-table" class="table table-hover table-responsive">
     <thead>
       <tr>
         <th>Star</th>
