--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://bootswatch.com/lumen/bootstrap.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>SWEETer-Cat</title>
   </head>
@@ -53,9 +54,15 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script> -->
+    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+
     <script type="text/javascript">
-      CKEDITOR.replace('editor')
+      $(document).ready(function() {
+        $('#sc-table').DataTable( {
+            "order": [[ 23, "desc" ]],
+        } );
+      } );
     </script>
+
   </body>
 </html>
