--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -17,7 +17,8 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> SWEETer-Cat</a>
-          <a class="navbar-text" href="/plot/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Plot</a>
+          <a class="navbar-text" href="/plot/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC Plot</a>
+          <a class="navbar-text" href="/plot-exo/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC+exoplanet plot</a>
         </div>
 
         <div class="collapse navbar-collapse">
