Center the plot

--- a/sweetercat/templates/plot.html
+++ b/sweetercat/templates/plot.html
@@ -60,6 +60,8 @@
     </form>
 
     <br><br><br>
-    {{ plot_div|indent(4)|safe }}
+    <center>
+      {{ plot_div|indent(4)|safe }}
+    </center>
 
 {% endblock %}
