--- a/sweetercat/templates/plot.html
+++ b/sweetercat/templates/plot.html
@@ -56,6 +56,7 @@
           <option value="log">Log</option>
           <option selected="selected">{{ yscale }}</option>
         </select>
+        Homogeneous parameters: <input type="checkbox" name="checkboxes" value="homo" {{'checked="checked"' if "homo" in checkboxes else ""}}/>
         <button type="submit">Submit</button>
     </form>
 
