Start implementing site with publications for issue #21

--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -19,6 +19,7 @@
           <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home"></span> SWEETer-Cat</a>
           <a class="navbar-text" href="/plot/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC Plot</a>
           <a class="navbar-text" href="/plot-exo/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC+exoplanet plot</a>
+          <a class="navbar-text" href="/publications/"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Publications</a>
         </div>
 
         <div class="collapse navbar-collapse">
