Scroll past end

--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>SWEETer-Cat</title>
+    <style>
+      html {
+        height: auto !important;
+        padding-bottom: 700px !important;
+          }
+    </style>
   </head>
 
   <header>
