--- a/sweetercat/templates/publications.html
+++ b/sweetercat/templates/publications.html
@@ -2,31 +2,25 @@
 
 {% block body %}
 
-
-<h1>Main papers</h1>
-
-{% for paper in publications['main'] %}
-  <h3><a href="{{ paper['adsabs'] }}" target="_blank">{{ paper['title'] }}</a></h3>
-  <h4>Authors:</h4>
-  <small>
-    {{ paper['authors'] }}
-  </small>
-  <h4>Abstract: </h4>
-  <p>{{ paper['abstract'] }}</p>
-{% endfor %}
+<div class="col-lg-offset-1 col-lg-5">
+  <h1>Main papers</h1>
+  {% for paper in publications['main'] %}
+    <h3><a href="{{ paper['adsabs'] }}" target="_blank">{{ paper['title'] }}</a></h3>
+    <h4>Authors: <small>{{ paper['authors'] }}</small></h4>
+    <h4>Abstract: </h4>
+    <p>{{ paper['abstract']|truncate(500) }}<a href="{{ paper['adsabs'] }}" target="_blank"> read more</a></p>
+  {% endfor %}
+</div>
 
 
-<h1>Derived papers</h1>
-
-{% for paper in publications['other'] %}
-  <h3><a href="{{ paper['adsabs'] }}" target="_blank">{{ paper['title'] }}</a></h3>
-  <h4>Authors:</h4>
-  <small>
-    {{ paper['authors'] }}
-  </small>
-  <h4>Abstract: </h4>
-  <p>{{ paper['abstract'] }}</p>
-{% endfor %}
-
+<div class="col-lg-5">
+  <h1>Derived papers</h1>
+  {% for paper in publications['other'] %}
+    <h3><a href="{{ paper['adsabs'] }}" target="_blank">{{ paper['title'] }}</a></h3>
+    <h4>Authors: <small>{{ paper['authors'] }}</small></h4>
+    <h4>Abstract: </h4>
+    <p>{{ paper['abstract']|truncate(500) }}<a href="{{ paper['adsabs'] }}" target="_blank"> read more</a></p>
+  {% endfor %}
+</div>
 
 {% endblock %}
