--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -23,7 +23,7 @@
     <tbody>
       {% for row in rows %}
       <tr>
-        <th scope="row" style="white-space:nowrap;"><a target="_blank" href="http://simbad.u-strasbg.fr/simbad/sim-basic?Ident={{ row['Star'] }}">{{ row['Star'] }}</a></th>
+        <th scope="row" style="white-space:nowrap;"><a target="_blank" href="/star/{{ row['Star'] }}">{{ row['Star'] }}</a></th>
         {% for column in columns %}
           {% if column == 'Author' %}
             <td style="white-space:nowrap;"><a target="_blank" href="{{ row['link'] }}">{{ row['Author'] }}</a></td>
