--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -8,6 +8,12 @@
 
   <p>A detailed description of each field can be found <a href="{{ url_for('static', filename='table.pdf') }}">here</a></p>
 
+  <p>Downdload the table in the following formats:
+  <a class="btn btn-info" href="download/sweet-cat.csv">CSV</a>
+  <a class="btn btn-info" href="download/sweet-cat.tsv">TSV</a>
+  </p>
+
+  <hr>
   <table id="sc-table" class="table table-hover table-responsive">
     <thead>
       <tr>
