--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://bootswatch.com/lumen/bootstrap.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/scroller/1.4.2/css/scroller.bootstrap.min.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>SWEETer-Cat</title>
     <style>
@@ -60,15 +61,22 @@
 
       {% endblock %}
     </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/scroller/1.4.2/js/dataTables.scroller.min.js"></script>
 
     <script type="text/javascript">
       $(document).ready(function() {
         $('#sc-table').DataTable( {
-            "order": [[ 23, "desc" ]],
+            deferRender: true,  // Need ajax or data option to be active
+            searching: true,
+            paging: true,
+            pagingType: "full_numbers",
+            // scroller: true,
+            // scrollY: 300
         } );
       } );
     </script>
