--- a/sweetercat/templates/detail.html
+++ b/sweetercat/templates/detail.html
@@ -2,6 +2,12 @@
 
 {% block body %}
 
+{% if show_planet %}
+  <div class="col-lg-12">
+    {{ plot|safe }}
+  </div>
+{% endif %}
+
 <h1><a target="_blank" href="http://simbad.u-strasbg.fr/simbad/sim-basic?Ident={{ info[0]['Star'] }}">{{ info[0]['Star'] }}</a></h1>
 <div class="col-lg-6">
   <h2>Stellar information</h2>
