Put absolute path

--- a/sweetercat/templates/404.html
+++ b/sweetercat/templates/404.html
@@ -6,6 +6,6 @@
   <h1>This page could not be found</h1>
   <h1>Our space monkeys are working on the issue...</h1>
   <br>
-  <img src="static/spacemonkey.png" alt="">
+  <img src="/static/spacemonkey.png" alt="">
 </div>
 {% endblock %}
