Close some unclosed tags

--- a/sweetercat/templates/main.html
+++ b/sweetercat/templates/main.html
@@ -23,9 +23,9 @@
         <th><label title="Right ascension">RA</label></th>
         <th><label title="Declination">dec</label></th>
         <th><label title="Visual apparent magnitude">V</label></th>
-        <th><label title="Error on visual apparent magnitude">&sigma;<sub>V<sub></label></th>
+        <th><label title="Error on visual apparent magnitude">&sigma;<sub>V</sub></label></th>
         <th><label title="Parallax [milli-arcsecond]">&pi;</label></th>
-        <th><label title="Error on parallax [milli-arcsecond]">&sigma;<sub>&pi;<sub></label></th>
+        <th><label title="Error on parallax [milli-arcsecond]">&sigma;<sub>&pi;</sub></label></th>
         <th><label title="Source of parallax">Source</label></th>
         <th><label title="Effective temperature [K]">T<sub>eff</sub></label></th>
         <th><label title="Error on effective temperature [K]">&sigma;<sub>T<sub>eff</sub></sub></label></th>
