Move the stylesheet to a separate file

--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -9,43 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/united/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/scroller/1.4.2/css/scroller.bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>SWEETer-Cat</title>
-    <style>
-      html {
-        height: auto !important;
-        padding-bottom: 100px !important;
-          }
-      body{
-        margin:0;
-        font: normal 16px Arial, Helvetica, sand-serif;
-        color:#333;
-      }
-
-      #particles{
-        background: #f8f8f8;
-        height: 60px;
-        width: 100%;
-        opacity: 0.9;
-      }
-
-      #pnavbar{
-        position:absolute;
-      }
-
-      a.ptext{
-        color: #333333;
-      }
-
-      hr {
-        margin-top: 0em;
-        margin-bottom: 0.5em;
-        border-style: solid;
-        border-width: 2px;
-        color: #e7e7e7;
-      }
-
-    </style>
   </head>
 
     <div id="particles">
