--- a/sweetercat/templates/detail.html
+++ b/sweetercat/templates/detail.html
@@ -4,8 +4,10 @@
 
 {% if show_planet %}
   {% if plot != None %}
-    <div class="col-lg-12">
-      {{ plot|safe }}
+    <div class="wrapper">
+      <div class="plot">
+        {{ plot|safe }}
+      </div>
     </div>
   {% endif %}
 {% endif %}
