Add things for local issue #96

--- a/sweetercat/templates/template.html
+++ b/sweetercat/templates/template.html
@@ -21,6 +21,8 @@
         <a class="ptext navbar-text" href="/plot/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC Plot</a>
         <a class="ptext navbar-text" href="/plot-exo/"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> SC+exoplanet plot</a>
         <a class="ptext navbar-text" href="/publications/"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Publications</a>
+        <a class="ptext navbar-text" href="/local/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> Local</a>
+        <a class="ptext navbar-text" href="/about/"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> About</a>
       </div>
     </div>
     <hr>
