Remove unused imports

--- a/sweetercat/templates/local.html
+++ b/sweetercat/templates/local.html
@@ -33,7 +33,7 @@ also provided in the table below.
   <tbody>
     <tr>
       <td><a class="btn btn-info" href="/download/sweet-cat.csv">SWEET-Cat.csv</a></td>
-      <td><a class="btn btn-info" href="/download/exoplanetEU.vo.gz">exoplanetEU.vo.gz</a></td>
+      <td><a class="btn btn-info" href="/download/exoplanetEU.csv">exoplanetEU.csv</a></td>
       <td><a class="btn btn-info" href="/download/requirements.txt">requirements.txt</a></td>
       <td><a class="btn btn-info" href="/download/sweetcat.py">sweetcat.py</a></td>
     </tr>
