Add contact information on a 404 error

--- a/sweetercat/templates/404.html
+++ b/sweetercat/templates/404.html
@@ -5,6 +5,7 @@
 
   <h1>This page could not be found</h1>
   <h1>Our space monkeys are working on the issue...</h1>
+  <h3>Please <a href="/about/">contact us</a> if the problem persist.</h3>
   <br>
   <img src="/static/spacemonkey.png" alt="">
 </div>
